update boa and fixes

--- a/deployments/devnet/neon.yaml
+++ b/deployments/devnet/neon.yaml
@@ -21,7 +21,7 @@ config:
     usdc: ""
     usdt: ""
     weth: ""
-  rollup_type: _
+  rollup_type: not_rollup
   wrapped_native_token: "0x11adC2d986E334137b9ad0a0F290771F31e9517F"
 contracts:
   amm:
