--- a/deployments/devnet/hyperliquid.yaml
+++ b/deployments/devnet/hyperliquid.yaml
@@ -21,7 +21,7 @@ config:
     usdc: ""
     usdt: ""
     weth: ""
-  rollup_type: _
+  rollup_type: not_rollup
   wrapped_native_token: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
 contracts:
   amm:
