--- a/deployments/examples/example_taiko_DEBUG.yaml
+++ b/deployments/examples/example_taiko_DEBUG.yaml
@@ -14,7 +14,7 @@ config:
   native_currency_symbol: ETH
   network_name: example_taiko
   public_rpc_url: https://rpc.taiko.xyz
-  rollup_type: _
+  rollup_type: not_rollup
   wrapped_native_token: "0xA51894664A773981C6C112C43ce576f315d5b1B6"
 contracts:
   amm:
