--- a/deployments/prod/plume.yaml
+++ b/deployments/prod/plume.yaml
@@ -23,7 +23,7 @@ config:
     usdc: '0x78adD880A697070c1e765Ac44D65323a0DcCE913'
     usdt: '0xda6087E69C51E7D31b6DBAD276a3c44703DFdCAd'
     weth: '0xca59cA09E5602fAe8B629DeE83FfA819741f14be'
-  rollup_type: _
+  rollup_type: not_rollup
   wrapped_native_token: '0xEa237441c92CAe6FC17Caaf9a7acB3f953be4bd1'
 contracts:
   amm:
