--- a/deployments/prod/sonic.yaml
+++ b/deployments/prod/sonic.yaml
@@ -24,7 +24,7 @@ config:
     usdc: '0x29219dd400f2Bf60E5a23d13Be72B486D4038894'
     usdt: null
     weth: '0x50c42deacd8fc9773493ed674b675be577f2634b'
-  rollup_type: _
+  rollup_type: not_rollup
   wrapped_native_token: '0x039e2fB66102314Ce7b64Ce5Ce3E5183bc94aD38'
 contracts:
   amm:
