--- a/deployments/prod/taiko.yaml
+++ b/deployments/prod/taiko.yaml
@@ -21,7 +21,7 @@ config:
     usdc: "0x07d83526730c7438048D55A4fc0b850e2aaB6f0b"
     usdt: "0x2DEF195713CF4a606B49D07E520e22C17899a736"
     weth: "0xA51894664A773981C6C112C43ce576f315d5b1B6"
-  rollup_type: _
+  rollup_type: not_rollup
   wrapped_native_token: "0xA51894664A773981C6C112C43ce576f315d5b1B6"
 contracts:
   amm:
