--- a/settings/chains/devnet/expchain.yaml
+++ b/settings/chains/devnet/expchain.yaml
@@ -1,7 +1,7 @@
 network_name: EXPchain
 chain_id: 18880
 is_testnet: True
-rollup_type: _
+rollup_type: not_rollup
 dao:
   crv: "0x0000000000000000000000000000000000000000"
   crvusd: "0x0000000000000000000000000000000000000000"
