--- a/settings/chains/devnet/neon.yaml
+++ b/settings/chains/devnet/neon.yaml
@@ -1,6 +1,6 @@
 network_name: neon
 chain_id: 245022926
-rollup_type: _
+rollup_type: not_rollup
 dao:
   crv: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
   crvusd: "0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C"
