--- a/settings/chains/examples/example.yaml
+++ b/settings/chains/examples/example.yaml
@@ -1,6 +1,6 @@
 network_name: example
 chain_id: 1
-rollup_type: _
+rollup_type: not_rollup
 dao:
   crv: "0xD533a949740bb3306d119CC777fa900bA034cd52"
   crvusd: "0xf939E0A03FB07F59A73314E73794Be0E57ac1b4E"
