--- a/settings/chains/prod/sonic.yaml
+++ b/settings/chains/prod/sonic.yaml
@@ -1,7 +1,7 @@
 network_name: sonic
 chain_id: 146
 is_testnet: False
-rollup_type: _
+rollup_type: not_rollup
 dao:
   crv: "0x5Af79133999f7908953E94b7A5CF367740Ebee35"
   crvusd: "0x7FFf4C4a827C84E32c5E175052834111B2ccd270"
