--- a/settings/chains/prod/xdc.yaml
+++ b/settings/chains/prod/xdc.yaml
@@ -12,7 +12,7 @@ explorer_base_url: https://xdcscan.com
 layer: 1
 logo_url: https://raw.githubusercontent.com/curvefi/curve-assets/refs/heads/main/chains/xdc.png
 native_currency_symbol: XDC
-native_currency_coingecko_id: xdc-network
+native_currency_coingecko_id: xdce-crowd-sale
 public_rpc_url: https://rpc1.xinfin.network
 wrapped_native_token: "0x951857744785E80e2De051c32EE7b25f9c458C42"
 reference_token_addresses:
