--- a/settings/chains/devnet/arb_sepolia.yaml
+++ b/settings/chains/devnet/arb_sepolia.yaml
@@ -1,6 +1,7 @@
 network_name: Arbitrum Sepolia
 chain_id: 421614
 rollup_type: arb_orbit
+evm_version: shanghai
 dao:
   crv: "0x50FB01Ee521b9D22cdcb713a505019f41b8BBFf4"
   crvusd: "0x92fc3EfE9129675A6d1405519C38b3aDdE4E0ADe"
