--- a/deployments/devnet/tac_testnet.yaml
+++ b/deployments/devnet/tac_testnet.yaml
@@ -8,7 +8,7 @@ config:
     parameter_admin: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
     vault: '0xAB1c34b53F12980a4fa9043B70c864CEE6891c0C'
   explorer_base_url: https://turin.explorer.tac.build/
-  file_name: tac
+  file_name: tac-testnet
   file_path: devnet/tac.yaml
   is_testnet: true
   layer: 1
