--- a/deployments/prod/tac.yaml
+++ b/deployments/prod/tac.yaml
@@ -15,7 +15,7 @@ config:
   logo_url: https://raw.githubusercontent.com/curvefi/curve-assets/refs/heads/main/chains/tac.png
   multicall2: null
   multicall3: '0xcA11bde05977b3631167028862bE2a173976CA11'
-  native_currency_coingecko_id: TAC
+  native_currency_coingecko_id: tac
   native_currency_symbol: TAC
   network_name: tac
   public_rpc_url: https://rpc.ankr.com/tac
