--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+// --- Package list optimized for modern Python and stability ---
+
 annotated-types==0.7.0 ; python_version >= "3.10" and python_version < "4"
 asttokens==2.4.1 ; python_version >= "3.10" and python_version < "4"
 attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -30,7 +32,7 @@ eth-rlp==2.1.0 ; python_version >= "3.10" and python_version < "4"
 eth-stdlib==0.2.7 ; python_version >= "3.10" and python_version < "4.0"
 eth-typing==4.4.0 ; python_version >= "3.10" and python_version < "4"
 eth-utils==4.1.1 ; python_version >= "3.10" and python_version < "4"
-exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
+exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "4.0" # Constraint is now relaxed to < 4.0
 fastjsonschema==2.20.0 ; python_version >= "3.10" and python_version < "4.0"
 filelock==3.15.4 ; python_version >= "3.10" and python_version < "4.0"
 hexbytes==1.2.1 ; python_version >= "3.10" and python_version < "4"
@@ -82,9 +84,9 @@ secretstorage==3.3.3 ; python_version >= "3.10" and python_version < "4.0" and s
 shellingham==1.5.4 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4"
 sortedcontainers==2.4.0 ; python_version >= "3.10" and python_version < "4.0"
-titanoboa @ git+https://github.com/vyperlang/titanoboa@master ; python_version >= "3.10" and python_version < "4.0"
+titanoboa @ git+https://github.com/vyperlang/titanoboa@9c162ba56a176bf2ba1b211b61fc175a6bcd1111 ; python_version >= "3.10" and python_version < "4.0" # FIXED TO A HASH
 titanoboa-zksync @ git+https://github.com/DanielSchiavini/titanoboa-zksync.git@9c162ba56a176bf2ba1b211b61fc175a6bcd1111 ; python_version >= "3.10" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "4.0" # Constraint is now relaxed to < 4.0
 tomlkit==0.13.0 ; python_version >= "3.10" and python_version < "4.0"
 toolz==0.12.1 ; python_version >= "3.10" and python_version < "4" and (implementation_name == "pypy" or implementation_name == "cpython")
 trie==3.0.1 ; python_version >= "3.10" and python_version < "4"
@@ -92,7 +94,7 @@ trove-classifiers==2024.7.2 ; python_version >= "3.10" and python_version < "4.0
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
 virtualenv==20.26.3 ; python_version >= "3.10" and python_version < "4.0"
-vyper==0.3.10 ; python_version >= "3.10" and python_version < "4"
+vyper==0.3.11 ; python_version >= "3.10" and python_version < "4" # VYPER BUMPED
 wheel==0.43.0 ; python_version >= "3.10" and python_version < "4"
 xattr==1.1.0 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "darwin"
 zipp==3.19.2 ; python_version >= "3.10" and python_version < "4"
